--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,15 @@
 .App {
   text-align: center;
+  display:flex; 
+  flex-direction:row;
+}
+
+.MonA {
+  float: left;
+}
+
+.MonB {
+  float: right;
 }
 
 .App-logo {
