--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 .App {
   text-align: center;
-  display:flex; 
-  flex-direction:row;
+  display: flex;
+  justify-content: space-around;
 }
 
 .MonA {
