--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,9 @@
 .App {
   text-align: center;
+}
+
+.Mons {
+  text-align: center;
   display: flex;
   justify-content: space-around;
 }
@@ -10,6 +14,10 @@
 
 .MonB {
   float: right;
+}
+
+.learns{
+  color: white;
 }
 
 .App-logo {
